// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Description should render correctly in "debug" mode 1`] = `
<Description
  description=""
>
  <Col
    tag="div"
    widths={
      Array [
        "xs",
        "sm",
        "md",
        "lg",
        "xl",
      ]
    }
  >
    <div
      className="col"
    >
      <div
        className="text-center result-space"
      >
        <h4 />
      </div>
    </div>
  </Col>
</Description>
`;

exports[`Plot should render correctly in "debug" mode 1`] = `
<Plot
  history={
    Object {
      "action": "POP",
      "block": [Function],
      "createHref": [Function],
      "go": [Function],
      "goBack": [Function],
      "goForward": [Function],
      "length": 1,
      "listen": [Function],
      "location": Object {
        "hash": "",
        "pathname": "/",
        "search": "",
        "state": Object {
          "state": Object {},
        },
      },
      "push": [Function],
      "replace": [Function],
    }
  }
>
  <div>
    <Container
      tag="div"
    >
      <div
        className="container"
      >
        <Form
          tag="form"
        >
          <form
            className=""
          >
            <FormGroup
              tag="div"
            >
              <div
                className="form-group"
              >
                <Title
                  title="Hero on the rescue mission again"
                >
                  <Col
                    tag="div"
                    widths={
                      Array [
                        "xs",
                        "sm",
                        "md",
                        "lg",
                        "xl",
                      ]
                    }
                  >
                    <div
                      className="col"
                    >
                      <div
                        className="text-center result-space"
                      >
                        <h2>
                          Hero on the rescue mission again
                        </h2>
                      </div>
                    </div>
                  </Col>
                </Title>
                <Description
                  description="01"
                >
                  <Col
                    tag="div"
                    widths={
                      Array [
                        "xs",
                        "sm",
                        "md",
                        "lg",
                        "xl",
                      ]
                    }
                  >
                    <div
                      className="col"
                    >
                      <div
                        className="text-center result-space"
                      >
                        <h4>
                          01
                        </h4>
                      </div>
                    </div>
                  </Col>
                </Description>
                <Resources
                  resources={Array []}
                >
                  <Col
                    tag="div"
                    widths={
                      Array [
                        "xs",
                        "sm",
                        "md",
                        "lg",
                        "xl",
                      ]
                    }
                  >
                    <div
                      className="col"
                    >
                      <div
                        className="text-center result-space"
                      >
                        <h3>
                          Used resources
                        </h3>
                        <ul
                          className="used-resources"
                        />
                      </div>
                    </div>
                  </Col>
                </Resources>
                <GenerateNewPlotBnt
                  generateNewPlot={[Function]}
                >
                  <Col
                    tag="div"
                    widths={
                      Array [
                        "xs",
                        "sm",
                        "md",
                        "lg",
                        "xl",
                      ]
                    }
                  >
                    <div
                      className="col"
                    >
                      <div
                        className="text-center result-space"
                      >
                        <Button
                          color="primary"
                          onClick={[Function]}
                          size="lg"
                          tag="button"
                        >
                          <button
                            aria-label={null}
                            className="btn btn-primary btn-lg"
                            onClick={[Function]}
                            type="button"
                          >
                            Generate New Plot
                          </button>
                        </Button>
                      </div>
                    </div>
                  </Col>
                </GenerateNewPlotBnt>
              </div>
            </FormGroup>
          </form>
        </Form>
      </div>
    </Container>
  </div>
</Plot>
`;

exports[`ResourceLink should render correctly in "debug" mode 1`] = `
<ResourceLink
  url="http://..."
>
  <li
    key="[object Object]"
  >
    <a
      href="http://..."
    >
      http://...
    </a>
  </li>
</ResourceLink>
`;

exports[`Resources should render correctly in "debug" mode 1`] = `
<Resources
  resources={
    Array [
      "http://0...",
      "http://1...",
    ]
  }
>
  <Col
    tag="div"
    widths={
      Array [
        "xs",
        "sm",
        "md",
        "lg",
        "xl",
      ]
    }
  >
    <div
      className="col"
    >
      <div
        className="text-center result-space"
      >
        <h3>
          Used resources
        </h3>
        <ul
          className="used-resources"
        >
          <ResourceLink
            key="0"
            url="http://0..."
          >
            <li
              key="[object Object]"
            >
              <a
                href="http://0..."
              >
                http://0...
              </a>
            </li>
          </ResourceLink>
          <ResourceLink
            key="1"
            url="http://1..."
          >
            <li
              key="[object Object]"
            >
              <a
                href="http://1..."
              >
                http://1...
              </a>
            </li>
          </ResourceLink>
        </ul>
      </div>
    </div>
  </Col>
</Resources>
`;

exports[`Title should render correctly in "debug" mode 1`] = `
<Title
  title=""
>
  <Col
    tag="div"
    widths={
      Array [
        "xs",
        "sm",
        "md",
        "lg",
        "xl",
      ]
    }
  >
    <div
      className="col"
    >
      <div
        className="text-center result-space"
      >
        <h2 />
      </div>
    </div>
  </Col>
</Title>
`;
